# Learn-Cmake

./: .gitignore  CMakeLists.txt  README.md  main.cpp
mylibraries/: cmakelists.txt  mylibrary.h  pow.cpp  pow.h  sqrt.cpp
